# modiff

./: README.md  justfile  main.py  pyproject.toml  todo.txt
modiff/: __init__.py  metrics.py
