[project]
name = "modiff"
version = "0.1.0"
description = "Tool for diffing model checkpoints."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "matplotlib>=3.10.3",
    "ruff>=0.11.12",
    "safetensors>=0.5.3",
    "tabulate>=0.9.0",
    "torch>=2.7.0",
    "tqdm>=4.67.1",
]
